# SudokuQML

./: README.md
src/: CMakeLists.txt  GameSummary.qml  GlobalsUtil.qml  Main.qml  SetterButton.qml  SettingsUI.qml  SudokuCell.qml  TopBar.qml  main.cpp  sudoku_logic.cpp  sudoku_logic.h  sudokumodel.cpp  sudokumodel.h  test.cpp
src/resources/: CMakeLists.txt  appSudoku.desktop
